plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id "org.flywaydb.flyway" version "12.0.3"
}

group = 'de.tozwhv.vereinskasse'
version = '0.0.1-SNAPSHOT'
description = 'server'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-h2console'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-flyway' // module dependency
    implementation 'com.h2database:h2'
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'com.h2database:h2:2.3.232'
    implementation 'org.flywaydb:flyway-core'
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.84'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'net.coobird:thumbnailator:0.4.21'
    implementation 'com.bucket4j:bucket4j_jdk8-core:8.10.1'
    implementation 'com.github.librepdf:openpdf:3.0.4'
}

tasks.named('test') {
    useJUnitPlatform()
}

flyway {
    url = 'jdbc:h2:file:/media/toz/3263-3534/gpt-server/server/data/vereinskasse;AUTO_SERVER=TRUE' // Pfad anpassen
    user = 'SA'
    password = ''
}